--- a/website/views/layout.jade
+++ b/website/views/layout.jade
@@ -10,7 +10,7 @@ html(ng-app="proyecto")
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='https://fonts.googleapis.com/icon?family=Material+Icons')
     link(href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css", rel="stylesheet", integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u", crossorigin="anonymous")
-    meta(name="viewport" content="width=device-width")
+    meta(name="viewport" content="width=device-width" charset="utf-8")
     base(href="/")
   body(ng-cloak layout="column" layout-fill)
     //div(flex layout="row")
@@ -30,6 +30,7 @@ html(ng-app="proyecto")
   script(src="https://www.youtube.com/iframe_api")
   script(src="/angular-youtube-mb/dist/angular-youtube-embed.min.js")
   script(src="/ng-lodash/build/ng-lodash.min.js")
+  script(src="/tiny-angular-wordcloud/dist/tangCloud.min.js")
   script(src="https://cdn.jsdelivr.net/angular.youtube-embed/1.7.10/ng-youtube-embed.min.js")
   script(src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap-tpls.min.js")
 
