--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,7 +7,7 @@ md-content.columna {
 }
 
 footer {
-  background-color: lightblue;
+  background-color: black;
   height: 64px;
 }
 
@@ -40,4 +40,78 @@ span.fav {
 
 div.logo {
   background-color: darkred;
+}
+
+/*.tangcloud {*/
+  /*height: 300px;*/
+  /*width: 200px;*/
+/*}*/
+
+
+.tangcloud span {
+  line-height: 100%;
+}
+
+.tangcloud-item-1 {
+  font-size: 10px;
+  color: #080808;
+  position: relative !important;
+}
+
+.tangcloud-item-2 {
+  font-size: 14px;
+  color: #101010;
+  position: relative !important;
+}
+
+.tangcloud-item-3 {
+  font-size: 18px;
+  color: #181818;
+  position: relative !important;
+}
+
+.tangcloud-item-4 {
+  font-size: 22px;
+  color: #303030;
+  position: relative !important;
+}
+
+.tangcloud-item-5 {
+  font-size: 26px;
+  color: #282828;
+  position: relative !important;
+}
+
+.tangcloud-item-6 {
+  font-size: 30px;
+  color: #202020;
+  position: relative !important;
+}
+
+.tangcloud-item-7 {
+  font-size: 34px;
+  color: #383838;
+  position: relative !important;
+}
+
+.tangcloud-item-8 {
+  font-size: 38px;
+  color: #404040;
+  position: relative !important;
+}
+
+.tangcloud-item-9 {
+  font-size: 42px;
+  color: #484848;
+  position: relative !important;
+}
+
+.tangcloud-item-10 {
+  font-size: 47px;
+  color: #000000;
+  position: relative !important;
+}
+
+.tangcloud-item-hidden {
+  visibility: hidden;
 }
