--- a/website/angularjs/controller/auth/home/home.jade
+++ b/website/angularjs/controller/auth/home/home.jade
@@ -13,31 +13,34 @@ div(layout="row")
                     div(layout= "row")
                         img.md-card-image(flex= 50, ng-src='{{lista.info[2].thumbnail}}')
                         img.md-card-image(flex= 50, ng-src='{{lista.info[3].thumbnail}}')
-                    md-card-title(ng-click="hct.verLista(lista)" style="cursor:pointer")
-                        md-card-title-text
-                            h2.md-headline(md-truncate) {{ lista.nombre }}
+                    span.md-headline(md-truncate style="padding-top: 1%") {{ lista.nombre }}
 
                     //md-card-actions(layout='row', layout-align='start center')
                     //    md-card-icon-actions
-                    p Por: {{ lista.nombreUsuario }}
-                    div(ng-repeat="tag in lista.tags")
-                        span Genero: {{ tag }}
 
-                    div
-                        md-button(ng-click="nct.play(lista.info); nct.reproduccion(lista.listaid)")
-                            i.material-icons() play_arrow
-                            span {{ lista.numreproducciones }}
-                            span(flex=100)
-                        span(ng-if="lista.usuarioid != lista.miusuarioid" class="fav")
+                    a(href='/perfilUsuario?idUser={{lista.usuarioid}}') {{ lista.nombreUsuario }}
+                    p Genero: {{ lista.tags[0] }}
+
+                    div(layout="row" style="padding-top:1%")
+                        span.btn-group.btn-group-xs
+                            //label.btn.btn-default.btn-sm(ng-model='radioModel', uib-btn-radio="'Left'", uncheckable='')
+                            i.material-icons.btn.btn-default.btn-xs(ng-click="nct.play(lista.info); nct.reproduccion(lista.listaid); $event.stopPropagation();" style="font-size:15px") play_arrow
+                            label.btn.btn-default.btn-xs(ng-model='radioModel', uib-btn-radio="'Middle'", uncheckable='' style="font-size:15px") {{ lista.numreproducciones }}
+
+                        span(ng-if="lista.usuarioid != lista.miusuarioid")
                             span(ng-if="lista.isfavorited == false")
                                 //md-button(ng-click="nct.favorito(lista.listaid)") Favorito
-                                md-whiteframe(class="caja")
-                                    i.material-icons(ng-click="nct.favorito(lista.listaid)") favorite_border
-                                    span {{ lista.numfavoritos }}
+                                span.btn-group.btn-group-xs
+                                    //label.btn.btn-default.btn-sm(ng-model='radioModel', uib-btn-radio="'Left'", uncheckable='')
+                                    i.material-icons.btn.btn-default.btn-xs(ng-click="nct.favorito(lista.listaid); $event.stopPropagation()" style="font-size:15px") favorite_border
+                                    label.btn.btn-default.btn-xs(ng-model='radioModel', uib-btn-radio="'Middle'", uncheckable='' style="font-size:15px") {{ lista.numfavoritos }}
                             span(ng-if="lista.isfavorited == true")
-                                //md-button(ng-click="nct.nofavorito(lista.listaid)") NO Favorito
-                                md-button(ng-click="nct.nofavorito(lista.listaid)")
-                                    i.material-icons favorite
+                                span.btn-group.btn-group-xs
+                                    //label.btn.btn-default.btn-sm(ng-model='radioModel', uib-btn-radio="'Left'", uncheckable='')
+                                    i.material-icons.btn.btn-default.btn-xs(ng-click="nct.nofavorito(lista.listaid); $event.stopPropagation()" style="font-size:15px") favorite
+                                    label.btn.btn-default.btn-xs(ng-model='radioModel', uib-btn-radio="'Middle'", uncheckable='' style="font-size:15px") {{ lista.numfavoritos }}
+
+
         div(layout="row" layout-align="center")
             p Listas populares
         section.cards
@@ -50,30 +53,30 @@ div(layout="row")
                     div(layout= "row")
                         img.md-card-image(flex= 50, ng-src='{{lista.info[2].thumbnail}}')
                         img.md-card-image(flex= 50, ng-src='{{lista.info[3].thumbnail}}')
+                    span.md-headline(md-truncate style="padding-top: 1%") {{ lista.nombre }}
 
-                    md-truncate {{ lista.nombre }}
+                    a(href='/perfilUsuario?idUser={{lista.usuarioid}}') {{ lista.nombreusuario }}
+                    p Genero: {{ lista.tags[0][0] }}
+                    span(flex)
+                    div(layout="row" style="padding-top:1%")
+                        span.btn-group.btn-group-xs
+                            //label.btn.btn-default.btn-sm(ng-model='radioModel', uib-btn-radio="'Left'", uncheckable='')
+                            i.material-icons.btn.btn-default.btn-xs(ng-click="nct.play(lista.info); nct.reproduccion(lista.listaid); $event.stopPropagation();" style="font-size:15px") play_arrow
+                            label.btn.btn-default.btn-xs(ng-model='radioModel', uib-btn-radio="'Middle'", uncheckable='' style="font-size:15px") {{ lista.numreproducciones }}
 
-                    //md-card-actions(layout='row', layout-align='start center')
-                    //    md-card-icon-actions
-                    p Por: {{ lista.nombreUsuario }}
-                    div(ng-repeat="tag in lista.tags")
-                        span Genero: {{ tag }}
-
-                    div
-                        md-button(ng-click="nct.play(lista.info); nct.reproduccion(lista.listaid)")
-                            i.material-icons() play_arrow
-                            span {{ lista.numreproducciones }}
-                            span(flex=100)
-                        span(ng-if="lista.usuarioid != lista.miusuarioid" class="fav")
+                        span(ng-if="lista.usuarioid != lista.miusuarioid")
                             span(ng-if="lista.isfavorited == false")
                                 //md-button(ng-click="nct.favorito(lista.listaid)") Favorito
-                                md-whiteframe(class="caja")
-                                    i.material-icons(ng-click="nct.favorito(lista.listaid)") favorite_border
-                                    span {{ lista.numfavoritos }}
+                                span.btn-group.btn-group-xs
+                                    //label.btn.btn-default.btn-sm(ng-model='radioModel', uib-btn-radio="'Left'", uncheckable='')
+                                    i.material-icons.btn.btn-default.btn-xs(ng-click="nct.favorito(lista.listaid); $event.stopPropagation()" style="font-size:15px") favorite_border
+                                    label.btn.btn-default.btn-xs(ng-model='radioModel', uib-btn-radio="'Middle'", uncheckable='' style="font-size:15px") {{ lista.numfavoritos }}
                             span(ng-if="lista.isfavorited == true")
-                                //md-button(ng-click="nct.nofavorito(lista.listaid)") NO Favorito
-                                md-button(ng-click="nct.nofavorito(lista.listaid)")
-                                    i.material-icons favorite
+                                span.btn-group.btn-group-xs
+                                    //label.btn.btn-default.btn-sm(ng-model='radioModel', uib-btn-radio="'Left'", uncheckable='')
+                                    i.material-icons.btn.btn-default.btn-xs(ng-click="nct.nofavorito(lista.listaid); $event.stopPropagation()" style="font-size:15px") favorite
+                                    label.btn.btn-default.btn-xs(ng-model='radioModel', uib-btn-radio="'Middle'", uncheckable='' style="font-size:15px") {{ lista.numfavoritos }}
+
 
     div(flex=30)
         md-content(layout="column")
@@ -83,9 +86,7 @@ div(layout="row")
             div(layout="row" layout-align="center")
                 md-content(layout-xs='column' layout='row')
                     md-card(flex)
-                        md-card-title(ng-click="nct.verLista(lista)" style="cursor:pointer")
-                            md-card-title-text
-                                span.md-headline(flex md-truncate) {{ hct.masEscuchada[0].nombre }}
+                        span.md-headline(flex md-truncate) {{ hct.masEscuchada[0].nombre }}
                         div(layout= "row")
                             img.md-card-image(flex= 50, ng-src='{{hct.masEscuchada[0].info[0].thumbnail}}')
                             img.md-card-image(flex= 50, ng-src='{{hct.masEscuchada[0].info[1].thumbnail}}')
@@ -95,12 +96,12 @@ div(layout="row")
 
                         //md-card-actions(layout='row', layout-align='start center')
                         //    md-card-icon-actions
-                        p Por: {{ hct.masEscuchada[0].nombreUsuario }}
+                        a(href='/perfilUsuario?idUser={{lista.usuarioid}}') {{ hct.masEscuchada[0].nombreusuario }}
                         div(ng-repeat="tag in hct.masEscuchada[0].tags")
                             span Genero: {{ tag }}
 
                         p Nº Favoritos: {{ hct.masEscuchada[0].numfavoritos }}
-                        div
+                        span(flex)
                             md-button(ng-click="nct.play(lista.info); nct.reproduccion(lista.listaid)")
                                 i.material-icons() play_arrow
                                 span {{ hct.masEscuchada[0].numreproducciones }}
