--- a/website/angularjs/controller/auth/editList/editList.jade
+++ b/website/angularjs/controller/auth/editList/editList.jade
@@ -1,4 +1,5 @@
-p editar {{ elc.editList.nombre }}
+p(style="font-size: 20px; font-weight: bold; text-align: center; padding-top: 2%") Editar {{ elc.editList.nombre }}
+p(style="text-align: center; font-weight: bold") Seleccione canciones para liminarle, pulse editar para editar su nombre o el boton añadir para insertar mas canciones
 
 md-list
     md-list-item(ng-repeat="info in elc.editList.info")
