--- a/website/angularjs/controller/auth/mislistas/mislistas.jade
+++ b/website/angularjs/controller/auth/mislistas/mislistas.jade
@@ -1,8 +1,9 @@
+
 div(layout="row")
     div(flex=45)
     div(flex=35)
         p(style="font-size: 20px; padding-left:5%; padding-top: 10%") Mi Perfil
-        md-button(ng-click="mlc.abrir()") Editar datos
+        md-button(md-ripple-size="full" ng-click="mlc.abrir()" ) Editar Mis Datos
 
 
     div(flex=20)
@@ -41,14 +42,13 @@ md-tabs(md-dynamic-height md-border-bottom md-center-tabs )
 
                 span(flex)
                 div
-                    md-button(ng-click="mlc.edit(lista)") EDITAR
+                    md-button(ng-click="mlc.edit(lista)") Editar Lista
                     div
-                        md-button(ng-click="mlc.showConfirm($event, lista.listaid )") Eliminar
+                        md-button(ng-click="mlc.showConfirm($event, lista.listaid )") Eliminar Lista
 
                 md-divider
-        ul(uib-pagination, total-items='mlc.totalListas', items-per-page='9' ng-model='mlc.paginaActual', ng-change='mlc.siguiente(1,mlc.paginaActual)')
-    md-tab(label="Favoritos" md-active="mlc.tab2")
-
+            ul(ng-show="mlc.totalFavoritos>9" uib-pagination, total-items='mlc.totalListas', items-per-page='9' ng-model='mlc.paginaActual', ng-change='mlc.siguiente(1,mlc.paginaActual)')
+    md-tab(label="Mis Favoritos" md-active="mlc.tab2")
         md-list(style="padding-left:20%" flex=80)
 
             md-list-item(ng-repeat="lista in mlc.favoritos track by $index" style="padding-bottom:1%; padding-top: 1%" layout="row")
@@ -91,7 +91,7 @@ md-tabs(md-dynamic-height md-border-bottom md-center-tabs )
                                         label.btn.btn-default.btn-xs(ng-model='radioModel', uib-btn-radio="'Middle'", uncheckable='' style="font-size:15px") {{ lista.numfavoritos }}
 
 
-        ul(uib-pagination, total-items='mlc.totalFavoritos', items-per-page='9' ng-model='mlc.paginaActual2', ng-change='mlc.siguiente(2,mlc.paginaActual2)')
+            ul(ng-show="mlc.totalFavoritos>9" uib-pagination, total-items='mlc.totalFavoritos', items-per-page='9' ng-model='mlc.paginaActual2', ng-change='mlc.siguiente(2,mlc.paginaActual2)' )
 
 
 
