--- a/website/angularjs/controller/auth/editInfo/editInfo.jade
+++ b/website/angularjs/controller/auth/editInfo/editInfo.jade
@@ -14,4 +14,6 @@ div(layour="row" flex)
                 label Contraseña
                 input(type="password" ng-model="eict.editInfo.password" )
             div
+                md-button(ng-click="eict.cancelar()") Cancelar
                 md-button(ng-click="eict.editarInfo()") Guardar
+
