--- a/website/angularjs/controller/auth/home/home.jade
+++ b/website/angularjs/controller/auth/home/home.jade
@@ -5,15 +5,20 @@ div(layout="row" style="padding-top: 2%")
             p(style="font-size: 20px; font-height: bold") Últimas listas
         section.cards
             div(layout='row', layout-align='center stretch' layout-wrap )
-                md-card(ng-repeat="lista in hct.nuevosHome track by $index" flex=20 style="height:70%"  )
-                    div(ng-click="hct.verLista(lista)" style="cursor:pointer")
-                        div(layout= "row")
-                            img.md-card-image(flex= 50, ng-src='{{lista.info[0].thumbnail}}')
-                            img.md-card-image(flex= 50, ng-src='{{lista.info[1].thumbnail}}')
-                        div(layout= "row")
-                            img.md-card-image(flex= 50, ng-src='{{lista.info[2].thumbnail}}')
-                            img.md-card-image(flex= 50, ng-src='{{lista.info[3].thumbnail}}')
-                        p.md-headline(md-truncate style="padding-top: 1%") {{ lista.nombre }}
+                md-card(ng-repeat="lista in hct.nuevosHome track by $index" flex=20 )
+                    div(ng-click="hct.verLista(lista)" style="cursor:pointer" flex)
+                        div(layout="row")
+
+                            div(layout= "column" flex=50)
+                                img.md-card-image(flex= 50, ng-src='{{lista.info[0].thumbnail}}')
+                                img.md-card-image(flex= 50, ng-src='{{lista.info[1].thumbnail}}')
+                            div(layout= "column" flex=50)
+                                img.md-card-image(flex= 50, ng-src='{{lista.info[2].thumbnail}}')
+                                img.md-card-image(flex= 50, ng-src='{{lista.info[3].thumbnail}}')
+                    div(layout="column")
+                        div(class="app-body" layout="column")
+                            div(flex=5)
+                                p(style="padding-top: 1%; overflow: hidden; text-overflow: ellipsis; font-weight: bold") {{ lista.nombre }}
 
                         //md-card-actions(layout='row', layout-align='start center')
                         //    md-card-icon-actions
@@ -21,8 +26,9 @@ div(layout="row" style="padding-top: 2%")
                         a(href='/perfilUsuario?idUser={{lista.usuarioid}}') {{ lista.nombreUsuario }}
                         p Genero: {{ lista.tags[0] }}
                         p Fecha: {{ lista.fecha }}
+                        span(flex=100)
 
-                        div(layout="row" style="padding-top:1%")
+                        div(layout="row" style="padding-top:1%" layout-align="start end")
                             span.btn-group.btn-group-xs
                                 //label.btn.btn-default.btn-sm(ng-model='radioModel', uib-btn-radio="'Left'", uncheckable='')
                                 i.material-icons.btn.btn-default.btn-xs(ng-click="hct.play(lista.info); hct.reproduccion(lista.listaid, 1); $event.stopPropagation();" style="font-size:15px") play_arrow
@@ -48,13 +54,14 @@ div(layout="row" style="padding-top: 2%")
             div(layout='row', layout-align='center stretch' layout-wrap)
                 md-card(ng-repeat="lista in hct.popularesHome track by $index" flex=20 )
                     div(ng-click="hct.verLista(lista)" style="cursor:pointer")
-                        div(layout= "row")
-                            img.md-card-image(flex= 50, ng-src='{{lista.info[0].thumbnail}}')
-                            img.md-card-image(flex= 50, ng-src='{{lista.info[1].thumbnail}}')
-                        div(layout= "row")
-                            img.md-card-image(flex= 50, ng-src='{{lista.info[2].thumbnail}}')
-                            img.md-card-image(flex= 50, ng-src='{{lista.info[3].thumbnail}}')
-                        p.md-headline(md-truncate style="padding-top: 1%") {{ lista.nombre }}
+                        div(layout="row")
+                            div(layout= "column" flex=50)
+                                img.md-card-image(flex= 50, ng-src='{{lista.info[0].thumbnail}}')
+                                img.md-card-image(flex= 50, ng-src='{{lista.info[1].thumbnail}}')
+                            div(layout= "column" flex=50)
+                                img.md-card-image(flex= 50, ng-src='{{lista.info[2].thumbnail}}')
+                                img.md-card-image(flex= 50, ng-src='{{lista.info[3].thumbnail}}')
+                        p(style="padding-top: 1%; font-weight: bold") {{ lista.nombre }}
 
                         a(href='/perfilUsuario?idUser={{lista.usuarioid}}') {{ lista.nombreUsuario }}
                         p Genero: {{ lista.tags[0] }}
